Bug #11595 ndb_mgm shows from IP for second mgmd
Submitted: 27 Jun 2005 23:11 Modified: 6 Oct 2005 2:23
Reporter: Jan Kneschke
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.12,5.0,5.1 OS:Linux (linux/x86)
Assigned to: Stewart Smith Target Version:

[27 Jun 2005 23:11] Jan Kneschke
Description:
If you have 2 mgmds in the cluster and check the ndb_mgm both entries for the mgm-nodes
show the same IP even if the mgmds are on different hosts.

How to repeat:
setup a cluster with 2 mgmds on different hosts and check output of SHOW in ndb_mgm.

Suggested fix:
show the IP of the mgmd-hosts.
[27 Jun 2005 23:26] Jonathan Miller
I checked this with the latest 5.1 clone. The really weird item here, is that I edit the
config.ini as follows:

[ndb_mgmd]
Id: 1
HostName: ndb08

[ndb_mgmd]
Id: 19
HostName: ##.###.1.94 (# = numbers removed for security reasons)

The ##.###.1.94 = ndb09 and ndb08 = ##.###.1.93

I only started a ndb_mgmd on ndb08, and if you do a show you get:

[ndb_mgmd(MGM)] 2 node(s)
id=1    @##.###.1.94  (Version: 5.1.0)
id=19 (not connected, accepting connect from ##.###.1.94)

The managment server shows to be running on ##.###.1.94 but it really is running on
##.###.1.93.
[29 Jun 2005 5:14] Stewart Smith
Unless this actually stops things working (e.g. unable to start the mgmd), i'll lower the
severity and priority of this bug.
[16 Sep 2005 9:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29975
[21 Sep 2005 16:44] Stewart Smith
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30158

This cset replaces the previous one.
[30 Sep 2005 6:48] Stewart Smith
Pushed to 4.1.15 and 5.0.14
[6 Oct 2005 2:23] Paul DuBois
Noted in 4.1.15, 5.0.14 changelogs.