BUG#11595 ndb_mgm shows from IP for second mgmd BUG#12037 ndb_mgmd IP address do not show in other ndb_mgmd processes

Extend ApiVersionConf to include address.